added gitpod and tuned up css

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,13 +1,14 @@
 # List the start up tasks. Learn more https://www.gitpod.io/docs/config-start-tasks/
 tasks:
-  - init: |
-      yarn global add @vue/cli
-      yarn global add surge
-      cd ~
-      git clone https://github.com/xx745/cellular-automaton-vuejs-2
-      cd cellular-automaton-vuejs-2
-      yarn install
+  - name: Install dependencies and start dev env
+    init: yarn
+    command: yarn serve
 
 # List the ports to expose. Learn more https://www.gitpod.io/docs/config-ports/
 ports:
   - port: 8080
+    onOpen: open-preview
+
+vscode:
+  extensions:
+    - octref.vetur
