--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,11 +5,14 @@ image:
 tasks:
   - name: Install dependencies and start dev env
     init: yarn
-    command: yarn serve
+    # below will give access to 'surge' and 'vue' binaries
+    command: |
+      export PATH="$(yarn global bin):$PATH"
+      yarn serve
 
 # List the ports to expose. Learn more https://www.gitpod.io/docs/config-ports/
 ports:
-  - port: 8080
+  - port: 8080 # will be used by 'yarn dev'
     onOpen: open-preview
 
 vscode:
